[gd_scene load_steps=2 format=3 uid="uid://dc7kakpgsssyj"]

[ext_resource type="Script" path="res://scenes/gui/menus/pause_menu.gd" id="1_e071d"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e071d")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Resume"

[node name="ResetCar" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Reset car"

[node name="GotoPits" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Go to pits"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Options"

[node name="QuitToMenu" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Quit To Menu"

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResetCar" to="." method="_on_reset_car_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GotoPits" to="." method="_on_goto_pits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
